y.output
Terminals unused in grammar

   AND
   OR
   NOT
   LSB
   RSB
   FOR


Grammar

    0 $accept: program $end

    1 program: program stat
    2        | %empty

    3 stat: declaration
    4     | expression
    5     | iteration_stat
    6     | print_func
    7     | comment_stat
    8     | RET return_stat

    9 return_stat: initializer SEMICOLON
   10            | expression_stat SEMICOLON

   11 func: func_parameter RB func_end
   12     | RB func_end

   13 func_end: SEMICOLON
   14         | LCB mul_stat RCB

   15 declaration: type ID ASGN initializer SEMICOLON
   16            | type ID SEMICOLON
   17            | type ID ASGN expression_stat SEMICOLON

   18 $@1: %empty

   19 declaration: type ID LB $@1 func

   20 func_parameter: func_parameter COMMA type ID
   21               | type ID

   22 func_call: func_call COMMA const
   23          | const

   24 const: S_CONST
   25      | expression_stat

   26 expression: ID asgn expression_stat SEMICOLON
   27           | ID arithmetic_postfix SEMICOLON

   28 $@2: %empty

   29 expression: ID LB func_call RB $@2 SEMICOLON
   30           | ID LB RB SEMICOLON
   31           | SEMICOLON

   32 expression_stat: expression_stat relational add_expression_stat
   33                | add_expression_stat

   34 add_expression_stat: add_expression_stat ADD mul_expression_stat
   35                    | add_expression_stat SUB mul_expression_stat
   36                    | mul_expression_stat

   37 mul_expression_stat: mul_expression_stat MUL factor
   38                    | mul_expression_stat DIV factor
   39                    | mul_expression_stat MOD factor
   40                    | factor

   41 factor: I_CONST
   42       | F_CONST
   43       | ID
   44       | LB expression_stat RB
   45       | ID arithmetic_postfix
   46       | ID LB func_call RB

   47 $@3: %empty

   48 iteration_stat: WHILE LB expression_stat RB LCB $@3 mul_stat RCB

   49 $@4: %empty

   50 $@5: %empty

   51 iteration_stat: IF LB expression_stat RB LCB $@4 mul_stat RCB $@5 haselse

   52 $@6: %empty

   53 haselse: ELSE haselseif LCB $@6 mul_stat RCB
   54        | %empty

   55 haselseif: IF LB expression_stat RB LCB mul_stat RCB moreelseif
   56          | %empty

   57 moreelseif: ELSE haselseif
   58           | %empty

   59 mul_stat: stat mul_stat
   60         | stat

   61 relational: MT
   62           | LT
   63           | MTE
   64           | LTE
   65           | EQ
   66           | NE

   67 print_func: PRINT LB print_type

   68 print_type: S_CONST RB SEMICOLON
   69           | ID RB SEMICOLON

   70 comment_stat: CPLUS_COMMENT
   71             | START_COMMENT END_COMMENT

   72 initializer: S_CONST
   73            | TRUE
   74            | FALSE

   75 asgn: ASGN
   76     | ADDASGN
   77     | SUBASGN
   78     | MULASGN
   79     | DIVASGN
   80     | MODASGN

   81 arithmetic_postfix: INC
   82                   | DEC

   83 type: INT
   84     | FLOAT
   85     | BOOL
   86     | STRING
   87     | VOID


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 83
FLOAT (259) 84
STRING (260) 86
BOOL (261) 85
VOID (262) 87
ADD (263) 34
SUB (264) 35
MUL (265) 37
DIV (266) 38
MOD (267) 39
INC (268) 81
DEC (269) 82
MT (270) 61
LT (271) 62
MTE (272) 63
LTE (273) 64
EQ (274) 65
NE (275) 66
ASGN (276) 15 17 75
ADDASGN (277) 76
SUBASGN (278) 77
MULASGN (279) 78
DIVASGN (280) 79
MODASGN (281) 80
AND (282)
OR (283)
NOT (284)
LB (285) 19 29 30 44 46 48 51 55 67
RB (286) 11 12 29 30 44 46 48 51 55 68 69
LCB (287) 14 48 51 53 55
RCB (288) 14 48 51 53 55
LSB (289)
RSB (290)
COMMA (291) 20 22
PRINT (292) 67
IF (293) 51 55
ELSE (294) 53 57
FOR (295)
WHILE (296) 48
ID (297) 15 16 17 19 20 21 26 27 29 30 43 45 46 69
SEMICOLON (298) 9 10 13 15 16 17 26 27 29 30 31 68 69
RET (299) 8
START_COMMENT (300) 71
END_COMMENT (301) 71
CPLUS_COMMENT (302) 70
I_CONST (303) 41
F_CONST (304) 42
S_CONST (305) 24 68 72
TRUE (306) 73
FALSE (307) 74


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
program (54)
    on left: 1 2, on right: 0 1
stat (55)
    on left: 3 4 5 6 7 8, on right: 1 59 60
return_stat (56)
    on left: 9 10, on right: 8
func (57)
    on left: 11 12, on right: 19
func_end (58)
    on left: 13 14, on right: 11 12
declaration (59)
    on left: 15 16 17 19, on right: 3
$@1 (60)
    on left: 18, on right: 19
func_parameter (61)
    on left: 20 21, on right: 11 20
func_call (62)
    on left: 22 23, on right: 22 29 46
const (63)
    on left: 24 25, on right: 22 23
expression (64)
    on left: 26 27 29 30 31, on right: 4
$@2 (65)
    on left: 28, on right: 29
expression_stat (66)
    on left: 32 33, on right: 10 17 25 26 32 44 48 51 55
add_expression_stat (67)
    on left: 34 35 36, on right: 32 33 34 35
mul_expression_stat (68)
    on left: 37 38 39 40, on right: 34 35 36 37 38 39
factor (69)
    on left: 41 42 43 44 45 46, on right: 37 38 39 40
iteration_stat (70)
    on left: 48 51, on right: 5
$@3 (71)
    on left: 47, on right: 48
$@4 (72)
    on left: 49, on right: 51
$@5 (73)
    on left: 50, on right: 51
haselse (74)
    on left: 53 54, on right: 51
$@6 (75)
    on left: 52, on right: 53
haselseif (76)
    on left: 55 56, on right: 53 57
moreelseif (77)
    on left: 57 58, on right: 55
mul_stat (78)
    on left: 59 60, on right: 14 48 51 53 55 59
relational (79)
    on left: 61 62 63 64 65 66, on right: 32
print_func (80)
    on left: 67, on right: 6
print_type (81)
    on left: 68 69, on right: 67
comment_stat (82)
    on left: 70 71, on right: 7
initializer (83)
    on left: 72 73 74, on right: 9 15
asgn (84)
    on left: 75 76 77 78 79 80, on right: 26
arithmetic_postfix (85)
    on left: 81 82, on right: 27 45
type (86)
    on left: 83 84 85 86 87, on right: 15 16 17 19 20 21


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (program)

    program  go to state 1


State 1

    0 $accept: program . $end
    1 program: program . stat

    $end           shift, and go to state 2
    INT            shift, and go to state 3
    FLOAT          shift, and go to state 4
    STRING         shift, and go to state 5
    BOOL           shift, and go to state 6
    VOID           shift, and go to state 7
    PRINT          shift, and go to state 8
    IF             shift, and go to state 9
    WHILE          shift, and go to state 10
    ID             shift, and go to state 11
    SEMICOLON      shift, and go to state 12
    RET            shift, and go to state 13
    START_COMMENT  shift, and go to state 14
    CPLUS_COMMENT  shift, and go to state 15

    stat            go to state 16
    declaration     go to state 17
    expression      go to state 18
    iteration_stat  go to state 19
    print_func      go to state 20
    comment_stat    go to state 21
    type            go to state 22


State 2

    0 $accept: program $end .

    $default  accept


State 3

   83 type: INT .

    $default  reduce using rule 83 (type)


State 4

   84 type: FLOAT .

    $default  reduce using rule 84 (type)


State 5

   86 type: STRING .

    $default  reduce using rule 86 (type)


State 6

   85 type: BOOL .

    $default  reduce using rule 85 (type)


State 7

   87 type: VOID .

    $default  reduce using rule 87 (type)


State 8

   67 print_func: PRINT . LB print_type

    LB  shift, and go to state 23


State 9

   51 iteration_stat: IF . LB expression_stat RB LCB $@4 mul_stat RCB $@5 haselse

    LB  shift, and go to state 24


State 10

   48 iteration_stat: WHILE . LB expression_stat RB LCB $@3 mul_stat RCB

    LB  shift, and go to state 25


State 11

   26 expression: ID . asgn expression_stat SEMICOLON
   27           | ID . arithmetic_postfix SEMICOLON
   29           | ID . LB func_call RB $@2 SEMICOLON
   30           | ID . LB RB SEMICOLON

    INC      shift, and go to state 26
    DEC      shift, and go to state 27
    ASGN     shift, and go to state 28
    ADDASGN  shift, and go to state 29
    SUBASGN  shift, and go to state 30
    MULASGN  shift, and go to state 31
    DIVASGN  shift, and go to state 32
    MODASGN  shift, and go to state 33
    LB       shift, and go to state 34

    asgn                go to state 35
    arithmetic_postfix  go to state 36


State 12

   31 expression: SEMICOLON .

    $default  reduce using rule 31 (expression)


State 13

    8 stat: RET . return_stat

    LB       shift, and go to state 37
    ID       shift, and go to state 38
    I_CONST  shift, and go to state 39
    F_CONST  shift, and go to state 40
    S_CONST  shift, and go to state 41
    TRUE     shift, and go to state 42
    FALSE    shift, and go to state 43

    return_stat          go to state 44
    expression_stat      go to state 45
    add_expression_stat  go to state 46
    mul_expression_stat  go to state 47
    factor               go to state 48
    initializer          go to state 49


State 14

   71 comment_stat: START_COMMENT . END_COMMENT

    END_COMMENT  shift, and go to state 50


State 15

   70 comment_stat: CPLUS_COMMENT .

    $default  reduce using rule 70 (comment_stat)


State 16

    1 program: program stat .

    $default  reduce using rule 1 (program)


State 17

    3 stat: declaration .

    $default  reduce using rule 3 (stat)


State 18

    4 stat: expression .

    $default  reduce using rule 4 (stat)


State 19

    5 stat: iteration_stat .

    $default  reduce using rule 5 (stat)


State 20

    6 stat: print_func .

    $default  reduce using rule 6 (stat)


State 21

    7 stat: comment_stat .

    $default  reduce using rule 7 (stat)


State 22

   15 declaration: type . ID ASGN initializer SEMICOLON
   16            | type . ID SEMICOLON
   17            | type . ID ASGN expression_stat SEMICOLON
   19            | type . ID LB $@1 func

    ID  shift, and go to state 51


State 23

   67 print_func: PRINT LB . print_type

    ID       shift, and go to state 52
    S_CONST  shift, and go to state 53

    print_type  go to state 54


State 24

   51 iteration_stat: IF LB . expression_stat RB LCB $@4 mul_stat RCB $@5 haselse

    LB       shift, and go to state 37
    ID       shift, and go to state 38
    I_CONST  shift, and go to state 39
    F_CONST  shift, and go to state 40

    expression_stat      go to state 55
    add_expression_stat  go to state 46
    mul_expression_stat  go to state 47
    factor               go to state 48


State 25

   48 iteration_stat: WHILE LB . expression_stat RB LCB $@3 mul_stat RCB

    LB       shift, and go to state 37
    ID       shift, and go to state 38
    I_CONST  shift, and go to state 39
    F_CONST  shift, and go to state 40

    expression_stat      go to state 56
    add_expression_stat  go to state 46
    mul_expression_stat  go to state 47
    factor               go to state 48


State 26

   81 arithmetic_postfix: INC .

    $default  reduce using rule 81 (arithmetic_postfix)


State 27

   82 arithmetic_postfix: DEC .

    $default  reduce using rule 82 (arithmetic_postfix)


State 28

   75 asgn: ASGN .

    $default  reduce using rule 75 (asgn)


State 29

   76 asgn: ADDASGN .

    $default  reduce using rule 76 (asgn)


State 30

   77 asgn: SUBASGN .

    $default  reduce using rule 77 (asgn)


State 31

   78 asgn: MULASGN .

    $default  reduce using rule 78 (asgn)


State 32

   79 asgn: DIVASGN .

    $default  reduce using rule 79 (asgn)


State 33

   80 asgn: MODASGN .

    $default  reduce using rule 80 (asgn)


State 34

   29 expression: ID LB . func_call RB $@2 SEMICOLON
   30           | ID LB . RB SEMICOLON

    LB       shift, and go to state 37
    RB       shift, and go to state 57
    ID       shift, and go to state 38
    I_CONST  shift, and go to state 39
    F_CONST  shift, and go to state 40
    S_CONST  shift, and go to state 58

    func_call            go to state 59
    const                go to state 60
    expression_stat      go to state 61
    add_expression_stat  go to state 46
    mul_expression_stat  go to state 47
    factor               go to state 48


State 35

   26 expression: ID asgn . expression_stat SEMICOLON

    LB       shift, and go to state 37
    ID       shift, and go to state 38
    I_CONST  shift, and go to state 39
    F_CONST  shift, and go to state 40

    expression_stat      go to state 62
    add_expression_stat  go to state 46
    mul_expression_stat  go to state 47
    factor               go to state 48


State 36

   27 expression: ID arithmetic_postfix . SEMICOLON

    SEMICOLON  shift, and go to state 63


State 37

   44 factor: LB . expression_stat RB

    LB       shift, and go to state 37
    ID       shift, and go to state 38
    I_CONST  shift, and go to state 39
    F_CONST  shift, and go to state 40

    expression_stat      go to state 64
    add_expression_stat  go to state 46
    mul_expression_stat  go to state 47
    factor               go to state 48


State 38

   43 factor: ID .
   45       | ID . arithmetic_postfix
   46       | ID . LB func_call RB

    INC  shift, and go to state 26
    DEC  shift, and go to state 27
    LB   shift, and go to state 65

    $default  reduce using rule 43 (factor)

    arithmetic_postfix  go to state 66


State 39

   41 factor: I_CONST .

    $default  reduce using rule 41 (factor)


State 40

   42 factor: F_CONST .

    $default  reduce using rule 42 (factor)


State 41

   72 initializer: S_CONST .

    $default  reduce using rule 72 (initializer)


State 42

   73 initializer: TRUE .

    $default  reduce using rule 73 (initializer)


State 43

   74 initializer: FALSE .

    $default  reduce using rule 74 (initializer)


State 44

    8 stat: RET return_stat .

    $default  reduce using rule 8 (stat)


State 45

   10 return_stat: expression_stat . SEMICOLON
   32 expression_stat: expression_stat . relational add_expression_stat

    MT         shift, and go to state 67
    LT         shift, and go to state 68
    MTE        shift, and go to state 69
    LTE        shift, and go to state 70
    EQ         shift, and go to state 71
    NE         shift, and go to state 72
    SEMICOLON  shift, and go to state 73

    relational  go to state 74


State 46

   33 expression_stat: add_expression_stat .
   34 add_expression_stat: add_expression_stat . ADD mul_expression_stat
   35                    | add_expression_stat . SUB mul_expression_stat

    ADD  shift, and go to state 75
    SUB  shift, and go to state 76

    $default  reduce using rule 33 (expression_stat)


State 47

   36 add_expression_stat: mul_expression_stat .
   37 mul_expression_stat: mul_expression_stat . MUL factor
   38                    | mul_expression_stat . DIV factor
   39                    | mul_expression_stat . MOD factor

    MUL  shift, and go to state 77
    DIV  shift, and go to state 78
    MOD  shift, and go to state 79

    $default  reduce using rule 36 (add_expression_stat)


State 48

   40 mul_expression_stat: factor .

    $default  reduce using rule 40 (mul_expression_stat)


State 49

    9 return_stat: initializer . SEMICOLON

    SEMICOLON  shift, and go to state 80


State 50

   71 comment_stat: START_COMMENT END_COMMENT .

    $default  reduce using rule 71 (comment_stat)


State 51

   15 declaration: type ID . ASGN initializer SEMICOLON
   16            | type ID . SEMICOLON
   17            | type ID . ASGN expression_stat SEMICOLON
   19            | type ID . LB $@1 func

    ASGN       shift, and go to state 81
    LB         shift, and go to state 82
    SEMICOLON  shift, and go to state 83


State 52

   69 print_type: ID . RB SEMICOLON

    RB  shift, and go to state 84


State 53

   68 print_type: S_CONST . RB SEMICOLON

    RB  shift, and go to state 85


State 54

   67 print_func: PRINT LB print_type .

    $default  reduce using rule 67 (print_func)


State 55

   32 expression_stat: expression_stat . relational add_expression_stat
   51 iteration_stat: IF LB expression_stat . RB LCB $@4 mul_stat RCB $@5 haselse

    MT   shift, and go to state 67
    LT   shift, and go to state 68
    MTE  shift, and go to state 69
    LTE  shift, and go to state 70
    EQ   shift, and go to state 71
    NE   shift, and go to state 72
    RB   shift, and go to state 86

    relational  go to state 74


State 56

   32 expression_stat: expression_stat . relational add_expression_stat
   48 iteration_stat: WHILE LB expression_stat . RB LCB $@3 mul_stat RCB

    MT   shift, and go to state 67
    LT   shift, and go to state 68
    MTE  shift, and go to state 69
    LTE  shift, and go to state 70
    EQ   shift, and go to state 71
    NE   shift, and go to state 72
    RB   shift, and go to state 87

    relational  go to state 74


State 57

   30 expression: ID LB RB . SEMICOLON

    SEMICOLON  shift, and go to state 88


State 58

   24 const: S_CONST .

    $default  reduce using rule 24 (const)


State 59

   22 func_call: func_call . COMMA const
   29 expression: ID LB func_call . RB $@2 SEMICOLON

    RB     shift, and go to state 89
    COMMA  shift, and go to state 90


State 60

   23 func_call: const .

    $default  reduce using rule 23 (func_call)


State 61

   25 const: expression_stat .
   32 expression_stat: expression_stat . relational add_expression_stat

    MT   shift, and go to state 67
    LT   shift, and go to state 68
    MTE  shift, and go to state 69
    LTE  shift, and go to state 70
    EQ   shift, and go to state 71
    NE   shift, and go to state 72

    $default  reduce using rule 25 (const)

    relational  go to state 74


State 62

   26 expression: ID asgn expression_stat . SEMICOLON
   32 expression_stat: expression_stat . relational add_expression_stat

    MT         shift, and go to state 67
    LT         shift, and go to state 68
    MTE        shift, and go to state 69
    LTE        shift, and go to state 70
    EQ         shift, and go to state 71
    NE         shift, and go to state 72
    SEMICOLON  shift, and go to state 91

    relational  go to state 74


State 63

   27 expression: ID arithmetic_postfix SEMICOLON .

    $default  reduce using rule 27 (expression)


State 64

   32 expression_stat: expression_stat . relational add_expression_stat
   44 factor: LB expression_stat . RB

    MT   shift, and go to state 67
    LT   shift, and go to state 68
    MTE  shift, and go to state 69
    LTE  shift, and go to state 70
    EQ   shift, and go to state 71
    NE   shift, and go to state 72
    RB   shift, and go to state 92

    relational  go to state 74


State 65

   46 factor: ID LB . func_call RB

    LB       shift, and go to state 37
    ID       shift, and go to state 38
    I_CONST  shift, and go to state 39
    F_CONST  shift, and go to state 40
    S_CONST  shift, and go to state 58

    func_call            go to state 93
    const                go to state 60
    expression_stat      go to state 61
    add_expression_stat  go to state 46
    mul_expression_stat  go to state 47
    factor               go to state 48


State 66

   45 factor: ID arithmetic_postfix .

    $default  reduce using rule 45 (factor)


State 67

   61 relational: MT .

    $default  reduce using rule 61 (relational)


State 68

   62 relational: LT .

    $default  reduce using rule 62 (relational)


State 69

   63 relational: MTE .

    $default  reduce using rule 63 (relational)


State 70

   64 relational: LTE .

    $default  reduce using rule 64 (relational)


State 71

   65 relational: EQ .

    $default  reduce using rule 65 (relational)


State 72

   66 relational: NE .

    $default  reduce using rule 66 (relational)


State 73

   10 return_stat: expression_stat SEMICOLON .

    $default  reduce using rule 10 (return_stat)


State 74

   32 expression_stat: expression_stat relational . add_expression_stat

    LB       shift, and go to state 37
    ID       shift, and go to state 38
    I_CONST  shift, and go to state 39
    F_CONST  shift, and go to state 40

    add_expression_stat  go to state 94
    mul_expression_stat  go to state 47
    factor               go to state 48


State 75

   34 add_expression_stat: add_expression_stat ADD . mul_expression_stat

    LB       shift, and go to state 37
    ID       shift, and go to state 38
    I_CONST  shift, and go to state 39
    F_CONST  shift, and go to state 40

    mul_expression_stat  go to state 95
    factor               go to state 48


State 76

   35 add_expression_stat: add_expression_stat SUB . mul_expression_stat

    LB       shift, and go to state 37
    ID       shift, and go to state 38
    I_CONST  shift, and go to state 39
    F_CONST  shift, and go to state 40

    mul_expression_stat  go to state 96
    factor               go to state 48


State 77

   37 mul_expression_stat: mul_expression_stat MUL . factor

    LB       shift, and go to state 37
    ID       shift, and go to state 38
    I_CONST  shift, and go to state 39
    F_CONST  shift, and go to state 40

    factor  go to state 97


State 78

   38 mul_expression_stat: mul_expression_stat DIV . factor

    LB       shift, and go to state 37
    ID       shift, and go to state 38
    I_CONST  shift, and go to state 39
    F_CONST  shift, and go to state 40

    factor  go to state 98


State 79

   39 mul_expression_stat: mul_expression_stat MOD . factor

    LB       shift, and go to state 37
    ID       shift, and go to state 38
    I_CONST  shift, and go to state 39
    F_CONST  shift, and go to state 40

    factor  go to state 99


State 80

    9 return_stat: initializer SEMICOLON .

    $default  reduce using rule 9 (return_stat)


State 81

   15 declaration: type ID ASGN . initializer SEMICOLON
   17            | type ID ASGN . expression_stat SEMICOLON

    LB       shift, and go to state 37
    ID       shift, and go to state 38
    I_CONST  shift, and go to state 39
    F_CONST  shift, and go to state 40
    S_CONST  shift, and go to state 41
    TRUE     shift, and go to state 42
    FALSE    shift, and go to state 43

    expression_stat      go to state 100
    add_expression_stat  go to state 46
    mul_expression_stat  go to state 47
    factor               go to state 48
    initializer          go to state 101


State 82

   19 declaration: type ID LB . $@1 func
